apps/mastodon/03-mastodon-deployments.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: web
  namespace: mastodon
spec:
  strategy:
    type: Recreate # because the volume claim is exclusive
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: web
        image: tootsuite/mastodon:v2.7.4
        command:
          - bundle
          - exec
          - rails
          - server
          - --port=3000
          - --binding=0.0.0.0
        ports:
        - name: web
          containerPort: 3000
        volumeMounts:
        - mountPath: "/mastodon/public/assets"
          name: mastodon-public
          subPath: "assets"
        - mountPath: "/mastodon/public/system"
          name: mastodon-public
          subPath: "system"
      volumes:
      - name: mastodon-public
        persistentVolumeClaim:
          claimName: mastodon-public

---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: streaming
  namespace: mastodon
spec:
  selector:
    matchLabels:
      app: streaming
  template:
    metadata:
      labels:
        app: streaming
    spec:
      containers:
      - name: streaming
        image: tootsuite/mastodon:v2.7.4
        command: ["yarn", "start"]
        ports:
        - name: streaming
          containerPort: 4000
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: worker
  namespace: mastodon
spec:
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      containers:
      - name: worker
        image: tootsuite/mastodon:v2.7.4
        command: ["bundle", "exec", "sidekiq",
          "-q", "default",
          "-q", "mailers",
          "-q", "pull",
          "-q", "push"]
